sucessful attempt to resolve the button alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ h2{
     text-align: center;
 }
 
+.col-4 h2{
+    height: 115px;
+}
+
 /*-------------------NAV BAR------------------------*/
 nav{
     background-color: #343a40;
@@ -65,6 +69,7 @@ header{
     color:rgb(255, 255, 255); 
 }
 
+
 /*--------------MENUS FOR DESKTOP AND MOBILE--------------*/
 .burger {
     float: right;
@@ -108,6 +113,10 @@ p{
     text-align: justify;
 }
 
+.col-4 p{
+    height: 200px;
+}
+
 /*---------------------FOOTER-----------------------*/
 
 footer{ 
@@ -134,7 +143,14 @@ section img{
     opacity: 0.5; 
 }
 
-/*COLUMNS PROPORTION*/
+/*-------------------ICONS--------------------*/
+.fas{
+    color: rgb(73, 29, 62);
+    padding-right: 0.5em;
+
+}
+
+/*-------------COLUMNS PROPORTION-----------------*/
 div.col-4{
     height:565px;
 }
